	  for DMA) (2013-6-25).
	* arch/arm/src/sam32/sam3u_gpio.h:  Correct configuration of PIO pins
	  for SAM4S B and C peripherals (2013-6-26)
	* configs/sam4s-xplained/src/sam_sram.c:  Added support for on-board
	  1MB SRAM (2013-6-26).
	* arch/arm/include/sam34/chip.h and sam3x_irq.h:  Add support for
	  SAM3X and SAM3A chips (2013-6-26).
	* arch/arm/src/sam34/chip/sam3x_vectors.h:  Add support for SAM3X/3A
	  interrupt vectros (2013-6-26).
	* arch/arm/src/sam34/sam3x_periphclks.h:  Add peripheral clock
	  controls for the SAM3X/3A (2013-6-26).
	* arch/arm/src/sam34/chip/sam3x_memorymap.h:  Add SAM3X/3A memory map
	  (2013-6-26).
	* arch/arm/src/sam34/chip/sam3x_pinmap.h:  Add SAM3X/3A pin
	  multi-plexing definitions (2013-6-26).
	* arch/arm/src/sam34/sam3x_gpio.h:  Add SAM3X/3A gpio encoding
	  macros.  These differ from the SAM3U only in because of the
	  6 PIOs:  PIOA-PIOF (2013-6-26).
	* configs/arduino-due:  This is an empty directory now with only
	  a README file in it but this directory will eventually hold a port
	  for the Arduino Due (2013-6-26).
	* arch/arm/src/sam34/Kconfig:  Add SAM3X/3A peripherals to the SAM3/4
	  configuration logic (2013-6-26).
	* arch/arm/src and include/ and configs/sam*/:  Large rename of all
	  references to SPI with SPI0.  This is because all other SAMs have
	  only SPI but the 3X/3A have SPI0 and SPI1 (2013-6-26).
	* configs/arduino-due:  Complete the basic board configuration and
	  integrate this into the configuration and build system.  The Arduino
	  Due is now ready to begin test (2013-6-17).
	* configs/arduino-due/nsh:  Add an NSH configuration for the Arduino
	  Due.  Both the OS test and NSH configuration are now functional
	  (2013-6-28).
	* configs/arduino-due/src:  Add support for the "L" LED (2013-6-28).
	* arch/arm/src/sam34/sam_allocateheap.c:  Clocking must be applied
	  to the SMC module for the 3X and 3A family in order for the NFC
	  SRAM to be functional (2013-6-28).